# disk-analyzer

./: README.md  package-lock.json  package.json
src/: App.jsx  home.jsx  scan.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
