[package]
name = "disk_analyzer2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dfrs = "0.0.7"
sysinfo = "0.29.10"
sys-info="0.9.1"
walkdir = "2.3"
filesize = "0.2.0"
chrono = "0.4"
clap = "4.4.7"
thiserror = "1.0"
rayon = "1.5"
diskscan = "0.3.0"
fs_extra = "1.2.0"
piechart = "1.0.0"
humantime = "2.1"
libc="0.2"
glob = "0.3.1"
num-traits = "0.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
